Header and spacing fixes

--- a/less/custom/item-basics.less
+++ b/less/custom/item-basics.less
@@ -74,10 +74,6 @@
   }
 }
 
-.item-basics-title {
-  text-transform: none;
-}
-
 .item-basics-subtitle {
   height: 2em;
   font-size: 1.25em;
